<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".main_login">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="NU Vault Logo"
            android:paddingHorizontal="110dp"
            app:srcCompat="@drawable/dog_vault" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="NU Vault"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="Log-in Account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_shadow_start_color"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/enter_id_number"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginIdNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/log_ex_2024_1234567"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/enter_password"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/loginBtn"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#2E7D32"
                android:fontFamily="@font/poppins_bold"
                android:padding="15dp"
                android:text="@string/log_in"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="12dp" />

            <TextView
                android:id="@+id/tvRegisterLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="none"
                android:linksClickable="true"
                android:text="@string/don_t_have_an_account_yet_sign_up_now"
                android:textAlignment="center"
                android:textColorLink="#1565C0"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>