<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".main_registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/nu_vault"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/register_account"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4D000000"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/enter_e_mail"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/regEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19000000"
                    android:backgroundTintMode="add"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/example_mail_com"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/enter_last_name"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/regLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19000000"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:text="Enter First Name:"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/regFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19000000"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPersonName"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/enter_nu_id_number"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/regIdNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19000000"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/ex_2024_1234567"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:text="Enter Registered School:"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/regSchoolDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#19000000"
                        android:fontFamily="@font/poppins"
                        android:hint="Click to Choose School..."
                        android:inputType="none"
                        android:padding="12dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:text="Enter Registered Course:"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintEnabled="false">

                    <AutoCompleteTextView
                        android:id="@+id/regCourseDropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#19000000"
                        android:fontFamily="@font/poppins"
                        android:hint="Click to Choose Course..."
                        android:inputType="none"
                        android:padding="12dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/grey"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/create_password"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/regPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#19000000"
                    android:fontFamily="@font/poppins"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/regBtn"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="#2E7D32"
                    android:fontFamily="@font/poppins_bold"
                    android:padding="15dp"
                    android:text="@string/register"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:cornerRadius="12dp" />

                <TextView
                    android:id="@+id/tvLoginLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/already_have_an_account_log_in"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorLink="#1565C0"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>